Update security configuration with enhanced route protection